@@ -47,12 +47,16 @@
     "electron-compile": "^6.4.1",
     "electron-devtools-installer": "^2.2.0",
     "jsonfile": "^3.0.1",
+    "standard": "^10.0.2",
     "vue": "^2.3.4"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "electron-prebuilt-compile": "1.6.11"
+    "electron-prebuilt-compile": "1.6.11",
+    "standard": "^10.0.2",
+    "electron-mocha": "~4.0.0",
+    "xvfb-maybe": "~0.2.1"
   }
 }
