@@ -1,0 +1,3 @@
+#loader, #open, #select-project {
+	padding: 5%;
+}
