@@ -1,18 +1,19 @@
-html, body, #editor {
+html, body, #content {
     margin: 0;
     height: 100%;
     font-family: 'Helvetica Neue', Arial, sans-serif;
     color: #333;
 }
 
-#file-editor, #editor {
+#file-editor {
     display: inline-block;
     margin-left: 200px;
     width: 100%;
     height: 100%;
     vertical-align: top;
     box-sizing: border-box;
-    padding: 0 20px;
+    padding-top: 5px;
+    padding-left: 5px;
 }
 
 textarea {
