@@ -1,5 +1,9 @@
 #loader {
-    padding: 5%;
+    display: none;
+}
+
+#loader.active {
+    display: initial;
 }
 
 #loader h2 {
@@ -14,6 +18,7 @@
 
 #form {
     padding: 20px;
+    margin-top: 5%;
 }
 
 #form div, #doc-title {
@@ -26,8 +31,9 @@
     margin-left: 20px;
 }
 
-#form div label span {
+#form div label {
     margin-left: 20px;
+    margin-top: 10px;
 }
 
 #form #error-text {
