@@ -9,42 +9,34 @@
         <link rel="stylesheet" href="../assets/css/sidebar.css">
         <link rel="stylesheet" href="css/editor.css">
         <link rel="stylesheet" href="css/loader.css">
+        <link rel="stylesheet" href="css/open.css">
+        <link rel="stylesheet" href="css/content.css">
+        <link rel="stylesheet" href="css/select.css">
+
+        <!-- <script src="https://unpkg.com/feather-icons"></script> -->
+        <script src="../assets/js/feather.min.js"></script>
     </head>
     <body>
-        <div id="loader"></div>
-
         <div id="wrapper">
             <div id="sidebar-wrapper"></div>
         </div>
 
-        <div id="editor"></div>
+        <div id="content"></div>
     </body>
-
-    <!-- Vue.js loading script -->
-    <script>
-    import Vue from 'vue';
-    import Editor from './vue/editor';
-    import Sidebar from './vue/sidebar';
-
-    //const editor = new Vue(Editor).$mount('#editor');
-    const sidebar = new Vue(Sidebar).$mount('#sidebar-wrapper');
-
-    </script>
 
     <!-- Resource Loading (Bootstrap + jQuery) -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../assets/js/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="../assets/js/feather.min.js"></script>
 
     <script src="appdata.js"></script>
     <script src="loader.js"></script>
 
     <script>
-        feather.replace();
-        $("#wrapper").toggleClass("toggled");
-
-        checkAppData();
+      import Vue from 'vue'
+      import sidebar from './vue/sidebar'
+      new Vue(sidebar).$mount('#sidebar-wrapper')
+      checkAppData()
     </script>
 </html>
