@@ -1,12 +1,14 @@
 <template>
-    <textarea id="file-editor" :value="input"></textarea>
+<div id="content">
+        <textarea id="file-editor" :value="input"></textarea>
+</div>
 </template>
 
 <script>
 export default {
   name: 'editor',
   data: {
-      project_dir: '',
+      project: '',
       input: "Open a project file to display here"
   }
 }
